examples/test/testpolicy17491.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17491
  namespace: namespace363
spec:
  podSelector:
    matchLabels:
      key21: value8
      key0: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value5
          key10: value7
          key29: value49
      podSelector:
        matchLabels:
          key47: value11
          key22: value12
